Fixing more layout issues

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -43,7 +43,7 @@ h1 {
     font-weight: 900;
     font-size: 2em;
     line-height: 1.5;
-    margin-bottom: 0.75em;
+    margin: 0;
 }
   
 h2 {
@@ -64,12 +64,6 @@ p:last-child {
 nav a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     color: inherit;
     text-decoration: none;
-}
-
-nav ul, nav ol {
-	margin: 0;
-	padding: 0;
-	list-style: none;
 }
 
 .banner h2 {
@@ -119,12 +113,35 @@ header nav {
     width: 100%;
 }
 
+nav h1 {
+    margin-right: 16px;
+}
+
+nav a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
 nav a, nav a:visited,
 nav h1, nav h1 a:visited {
     color: var(--light-text);
 }
 nav a:hover, nav h1 a:hover {
     color: var(--quaternary);
+}
+
+nav a span {
+    opacity: 0;
+}
+nav a i {
+    opacity: 0.8;
+}
+nav a.active i, nav a.active span {
+    font-weight: bold;
+    opacity: 1;
 }
 
 
@@ -134,10 +151,9 @@ nav a:hover, nav h1 a:hover {
         justify-content: flex-start;
     }
 
-    nav a, nav h1 {
+    nav a {
         margin-right: 8px;
     }
-
 }
 
 /* landscape tablet */
@@ -151,14 +167,11 @@ nav a:hover, nav h1 a:hover {
     nav a, nav h1 {
         margin-right: 0;
         margin-bottom: 32px;
+        height: initial;
     }
 }
 
 /* ------------------------------------------------------------ Main */
-
-main section {  
-    padding: 16px;
-}
 
 /* ------------------------------------------------------------ Footer */
 footer {
@@ -174,8 +187,13 @@ footer {
 .grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: min-content auto min-content;
     gap: 8px;
     margin: 0 16px;
+}
+
+.grid .grid {
+    margin: 0;
 }
 
 .grid header {
@@ -204,8 +222,13 @@ footer {
 @media (min-width: 905px) {
     .grid {
         grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: auto min-content;
         margin: 0 32px;
         gap: 32px;
+    }
+
+    .grid .grid {
+        grid-template-columns: repeat(10, 1fr);
     }
 
     .grid header {
@@ -230,6 +253,11 @@ footer {
 @media (min-width: 1240px) {
     .grid header {
         grid-column-end: span 1;
+    }
+
+    .grid .grid {
+        grid-template-columns: repeat(11, 1fr);
+        margin: 0;
     }
 
     .grid main, .grid footer {
